# gitlab-ci-verify

./: .gitignore  .gitmodules  .grant.yaml  .ort.yml  .pre-commit-hooks.yaml  .releaserc.json  .sonarcloud.properties  404.html  CHANGELOG.md  CNAME  CONTRIBUTING.md  Dockerfile  Dockerfile.ci-lint-api-proxy  Makefile  NOTES  NOTICE  README.md  add-builtin-check.html  codecov.yml  generate-notice.sh  go.mod  go.sum  index.html  installation.html  main.go  mkdocs.yml  notice.tmpl  properdocs.yml  renovate.json  requirements-docs.txt  wheel.yaml
.circleci/: config.yml
.github/workflows/: claude.yml  license-check.yml  ort.yml
adr/: 000-TEMPLATE.html  0001-Shellcheck-Integration.html  002-Integration-of-custom-policies.html
checks/: GL-201.html  GL-202.html
ci-templates/: v2.gitlab-ci.yml
cmd/: main.go
cmd/gitlab-ci-lint-api-proxy/: main.go  notice.go  notice_empty.go
development/: local.html
docs/: .nav.yml  Include_resolution.md  Writing_custom_policies.md  add-builtin-check.md  index.md  installation.md
docs/adr/: 000-TEMPLATE.md  0001-Shellcheck-Integration.md  002-Integration-of-custom-policies.md
docs/checks/: Add_check.md
docs/development/: local.md
docs/extending/: writing-custom-policies.md
docs/findings/: GL-101.md  GL-102.md  GL-103.md  GL-201.md  GL-202.md  INC-101.md  INC-102.md
docs/how-it-works/: include-resolution.md  shellcheck-execution.md
docs/limitations/: Include_resolution.md
docs/usage/: Ignore-findings.md  authentication-with-gitlab.md  flags.md  python-library.md
extending/: writing-custom-policies.html
findings/: GL-101.html  GL-102.html  GL-103.html  GL-201.html  GL-202.html  INC-101.html  INC-102.html
how-it-works/: Include_resolution.html  include-resolution.html  shellcheck-execution.html
internal/buildinfo/: print.go  print_test.go
internal/cache/: path.go  path_test.go  store.go  store_test.go
internal/ci_lint_api_proxy/: context.go  context_test.go  error.go  error_test.go  main.go  not_found.go  not_found_test.go  project_lint.go  project_lint_test.go
internal/cli/: configuration.go  configuration_test.go  stdin.go  stdin_test.go
internal/format-conversion/: yaml.go  yaml_test.go
internal/git/: gitlab.go  remote_urls.go
internal/hashing/: main.go  main_test.go
internal/httputils/: retryable_client.go  rfc7232_client.go  rfc7232_client_test.go
internal/logging/: logger.go  logger_test.go
internal/netrc/: main.go  main_test.go
internal/rego_policies/: dev_helpers.go  dev_helpers_test.go  lib.rego  manager.go  manager_test.go
internal/shellcheck/: bin_darwin_aarch64.go  bin_darwin_x86_64.go  bin_linux_aarch64.go  bin_linux_riscv64.go  bin_linux_x86_64.go  bin_windows.go  ignored_checks.go  main.go  main_test.go  result.go
internal/vault/: api_test.go  get.go  token.go  token_test.go
internal/yamlpathutils/: line_numbers.go  line_numbers_test.go  main.go  main_test.go
pkg/checks/: check.go  check_finding.go  check_finding_test.go  check_input.go  check_input_test.go  checks.go  gitlab_pages.go  gitlab_pages.rego  gitlab_pages_test.go  local_include_glob_check.go  local_include_glob_check_test.go  main_test.go  model.go  model_test.go  opa_bundles.go  pipelineApiLintCheck.go  pipeline_api_lint_check.go  pipeline_api_lint_check_test.go  project_detect.go  project_detect_test.go  rego.go  rego_bundle_check.go  rego_bundle_check_test.go  rego_in_memory_check.go  run.go  (+9 more)
python-wrapper/: CONTRIBUTING.md  LICENSE  README.md  all-documents.html  apidocs-help.html  classIndex.html  extra.css  fullsearchindex.json  gitlab_ci_verify.config.GitlabCiVerifyConfig.html  gitlab_ci_verify.config.html  gitlab_ci_verify.html  gitlab_ci_verify.model.Finding.html  gitlab_ci_verify.model.html  gitlab_ci_verify.model_test.ModelTest.html  gitlab_ci_verify.model_test.html  gitlab_ci_verify.parse.FindingsParseException.html  gitlab_ci_verify.parse.html  gitlab_ci_verify.parse_test.ParseTest.html  gitlab_ci_verify.parse_test.html  gitlab_ci_verify.process.html  gitlab_ci_verify.process_test.ProcessTest.html  gitlab_ci_verify.process_test.html  gitlab_ci_verify.verify.html  index.html  moduleIndex.html  nameIndex.html  objects.inv  searchindex.json  undoccedSummary.html
python_wrapper/: .gitignore  pyproject.toml
python_wrapper/gitlab_ci_verify/: __init__.py  config.py  model.py  model_test.py  parse.py  parse_test.py  process.py  process_test.py  verify.py
usage/: Ignore-findings.html  authentication-with-gitlab.html  flags.html  python-library.html
(+158 files in other folders)
