[project]
name = "gitlab-ci-verify"
version = "2.1.11"
description = "Validate and lint your gitlab ci files using ShellCheck, the Gitlab API and curated checks"
authors = [
    { name = "Timo Reymann", email = "mail@timo-reymann.de" }
]
readme = "README.md"
classifiers =  [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
]

dependencies = [
    "gitlab-ci-verify-bin==2.*",
    "coverage==7.9.*"
]


[project.optional-dependencies]
dev = [
    "setuptools==75.*",
    "setuptools-scm==8.*",
    "twine==6.1.*",
    "wheel==0.45.*",
    "pydoctor==25.4.*",
    "build==1.*"
]


[tool.setuptools_scm]
root = ".."


[tool.pydoctor]
verbose = 0
warnings-as-errors = true

intersphinx = ["https://docs.python.org/3/objects.inv"]
docformat = "restructuredtext"
html-output = "gh-pages"

add-package = ["gitlab_ci_verify"]
project-name = "gitlab_ci_verify"
project-url = "https://github.com/timo-reymann/gitlab-ci-verify"

theme = "base"
template-dir = "pydoctor-theme"
privacy = [
    "HIDDEN:gitlab_ci_verify.*_test"
]

[build-system]
requires = [
    "setuptools==75.*",
    "setuptools-scm",
    "wheel",
]
build-backend = "setuptools.build_meta"